--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,9 +16,19 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
+
+*, *:after, *:before {
+  box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+}
+
 
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
@@ -47,10 +57,8 @@ body {
 
 /* Portrait layout (default) */
 .app {
-    padding-top: 190px;
+    padding-top: 20px;
     text-align: center;
-
-    background: url('../img/logo.png') no-repeat center 10px;
 
     /* background:url(../img/logo.png) no-repeat center top; 170px x 200px */
     /* position:absolute; position in the center of the screen */
@@ -63,6 +71,50 @@ body {
     /* padding: 180px 0px 0px 0px;     image height is 200px (bottom 20px are overlapped with text) */
     /* margin : -200px 0px 0px -112px; offset vertical: half of image height and text area height */
     /* offset horizontal: half of text area width */
+}
+
+.thali-info {
+  text-transform: none;
+}
+
+.thali-box {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0.75em;
+  width: 44%;
+  margin: 2%;
+  background-color: #dedede;
+  border: 2px solid #777;
+  text-align: center;
+}
+
+.thali-box.full {
+  width: 96%;
+}
+
+.thali-box.active {
+  border-color: #beffbe;
+}
+
+.thali-box.active .availability-line {
+  display: none;
+}
+
+.thali-box p,
+.thali-box ul {
+  padding-left: 0.5em;
+  margin: 0.5em 0;
+}
+
+.thali-box ul {
+  display: inline-block;
+  text-align: left;
+  list-style: none;
+}
+
+
+.thali-box span {
+  display: block;
 }
 
 /* Landscape layout (with min-width) */
