--- a/www/css/index.css
+++ b/www/css/index.css
@@ -112,6 +112,16 @@ body {
   list-style: none;
 }
 
+.thali-box li {
+  display: block;
+  padding: 0.25em 0;
+  border-top: 1px solid rgba(0,0,0,0.25);
+}
+
+.thali-box li:last-child {
+  border-bottom: 1px solid rgba(0,0,0,0.25);
+}
+
 
 .thali-box span {
   display: block;
